@@ -7,6 +7,6 @@ AUX symon-syweb-total_firewall.layout.patch 1673 RMD160 63e130338b7d48dc2debc4c2
 AUX symux-init.d 378 RMD160 438f3ee87579117db71fa346cd333cc4740b8a35 SHA1 bc5edf413f24aed698147767447f0266c4374415 SHA256 f887ab858987fc6f0984cba93dddbb1c82fb1ed515340002e373c0aa4541e584
 DIST symon-2.79.tar.gz 102400 RMD160 693b798cd6c564f4e8b79c62c1776f5b036aaf1a SHA1 a21566f3291baaa39806bec32550d5a28a163213 SHA256 7157b087b99a59f3aba9a02c375fb1b411dc4329463f748d2323c3cdf3d0cd83
 DIST syweb-0.58.tar.gz 40960 RMD160 5dffc149a078789703c1ee10699e8aab350313d7 SHA1 bf0aa3a96533f8d6ae38f5317ae001282510ced4 SHA256 c01dfbc9f069d73d7c92880a0ed05bd7bca3e970ab282c2deb706861af7d6dcf
-EBUILD symon-2.79.ebuild 3293 RMD160 4c2541304264a7fc84a95f40495a7ff09412f1f9 SHA1 0b1ec5c2bf06a502ca92e820d117805e47de74d1 SHA256 c11295f1f4da0e9026502b4daeb1d4db2ef0a7c34a3c1142fedecb41e2190b1e
-MISC ChangeLog 5172 RMD160 57bebb5ae339ba51c03b6430a653e6a8a6528c19 SHA1 c3165206fee9d7978015db47ee9fda025ef190e8 SHA256 596db9cf4c566583bed2c13932e169581a9ad0147c149703030dad6802da1f8a
+EBUILD symon-2.79.ebuild 3283 RMD160 a22d80e79be85cb6ce6a5f198477ae3d8cb6c956 SHA1 42dffd1ee9cd1daf358b349cf1c4fd5a4058d290 SHA256 bae996a6ebc3d4eb592f157ba8d928290c5ebd5e581267b0e9ad0b7186bd64cc
+MISC ChangeLog 5285 RMD160 6570b98f289a56c2b008ea0923bcd10c5cd47be4 SHA1 08c912ab58707f0fbe92a78ae60b23a0aa661a35 SHA256 7b59a9b3a6fd86cfb704d50e6a0bd6afa579e10be035acae3b3f0f7fb5cb0eb3
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
