@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
+  Rename 'client' USE flag to 'perl'
+
   11 Jun 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.79.ebuild:
   Simplify die messages, while there avoid using identical die messages in the
   same function to ease error identification
